--- a/.github/workflows/create-service.yml
+++ b/.github/workflows/create-service.yml
@@ -7,8 +7,6 @@ on:
       - develop
     paths:
       - "create-service/**"
-    tags:
-      - "v*.*.*"
 
   pull_request:
     branches:
@@ -16,14 +14,20 @@ on:
     paths:
       - "create-service/**"
 
+  push:
+    tags:
+      - "v*.*.*"
+
 jobs:
   tests:
+    if: "!startsWith(github.ref, 'refs/tags/')"   
     uses: ./.github/workflows/reusable-tests.yml
     with:
       working-directory: create-service
 
   docker:
     needs: tests
+    if: "!startsWith(github.ref, 'refs/tags/')"
     uses: ./.github/workflows/reusable-docker.yml
     with:
       context: create-service
