--- a/.github/workflows/create-service.yml
+++ b/.github/workflows/create-service.yml
@@ -5,8 +5,13 @@ on:
     branches:
       - main
       - develop
-    paths:
-      - "create-service/**"
+    tags:
+      - "v*.*.*"
+
+    paths-ignore:
+      - "**.md"
+      - "infra/**"
+      - "assets/**"
 
   pull_request:
     branches:
@@ -14,13 +19,9 @@ on:
     paths:
       - "create-service/**"
 
-  push:
-    tags:
-      - "v*.*.*"
-
 jobs:
   tests:
-    if: "!startsWith(github.ref, 'refs/tags/')"   
+    if: "!startsWith(github.ref, 'refs/tags/')"
     uses: ./.github/workflows/reusable-tests.yml
     with:
       working-directory: create-service
