--- a/.github/workflows/create-service.yml
+++ b/.github/workflows/create-service.yml
@@ -7,7 +7,6 @@ on:
       - develop
     tags:
       - "v*.*.*"
-
     paths-ignore:
       - "**.md"
       - "infra/**"
@@ -21,14 +20,14 @@ on:
 
 jobs:
   tests:
-    if: "!startsWith(github.ref, 'refs/tags/')"
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     uses: ./.github/workflows/reusable-tests.yml
     with:
       working-directory: create-service
 
   docker:
     needs: tests
-    if: "!startsWith(github.ref, 'refs/tags/')"
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     uses: ./.github/workflows/reusable-docker.yml
     with:
       context: create-service
@@ -37,5 +36,6 @@ jobs:
 
   release:
     needs: docker
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     uses: ./.github/workflows/reusable-release.yml
+ 
