--- a/.github/workflows/create-service.yml
+++ b/.github/workflows/create-service.yml
@@ -19,6 +19,7 @@ on:
       - "create-service/**"
 
 jobs:
+
   tests:
     if: ${{ !startsWith(github.ref, 'refs/tags/') }}
     uses: ./.github/workflows/reusable-tests.yml
@@ -33,9 +34,11 @@ jobs:
       context: create-service
       dockerfile: create-service/Dockerfile
       image-name: create-service
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
   release:
     needs: docker
     if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     uses: ./.github/workflows/reusable-release.yml
- 
