--- a/.github/workflows/reusable-tests.yml
+++ b/.github/workflows/reusable-tests.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/go/pkg/mod
-          key: go-${{ hashFiles('${{ inputs.working-directory }}/go.sum') }}
+          key: go-${{ hashFiles(format('{0}/go.sum', inputs.working-directory)) }}
           restore-keys: go-
 
       - name: Setup Go
