--- a/.github/workflows/reusable-docker.yml
+++ b/.github/workflows/reusable-docker.yml
@@ -32,7 +32,6 @@ jobs:
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
 
-      # --- Logins ---
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -46,41 +45,31 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # --- Metadata ---
-      - name: Extract metadata (tags, labels)
+      - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository }}/${{ inputs.image-name }}
+            ghcr.io/${{ github.actor }}/${{ inputs.image-name }}
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ inputs.image-name }}
 
-      # ------------------------------------------------------------------
-      # --- Build local image (amd64 only) for Trivy Scan ---
-      # ------------------------------------------------------------------
       - name: Build local amd64 image for Trivy
         uses: docker/build-push-action@v5
         with:
           context: ${{ inputs.context }}
           file: ${{ inputs.dockerfile }}
           platforms: linux/amd64
-          load: true                             # <-- Necesario para que Trivy la encuentre
-          tags: local-scan-image                 # <-- Imagen temporal SOLO para el scan
+          load: true
+          tags: local-scan-image
 
-      # ------------------------------------------------------------------
-      # --- Trivy Scan using local image ---
-      # ------------------------------------------------------------------
       - name: Trivy Security Scan
         uses: aquasecurity/trivy-action@0.22.0
         with:
-          image-ref: local-scan-image            # <-- Se escanea la imagen local
+          image-ref: local-scan-image
           format: table
           exit-code: 1
           ignore-unfixed: true
 
-      # ------------------------------------------------------------------
-      # --- Multi-Arch Final Build & Push ---
-      # ------------------------------------------------------------------
       - name: Build and Push Multi-Arch Image
         uses: docker/build-push-action@v5
         with:
