--- a/.github/workflows/reusable-docker.yml
+++ b/.github/workflows/reusable-docker.yml
@@ -18,6 +18,10 @@ on:
       DOCKERHUB_TOKEN:
         required: true
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -32,6 +36,7 @@ jobs:
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
 
+      # ---- Logins ----
       - name: Login to GHCR
         uses: docker/login-action@v3
         with:
@@ -45,14 +50,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # ---- Metadata ----
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: |
-            ghcr.io/${{ github.repository }}/${{ inputs.image-name }}
+            ghcr.io/${{ github.actor }}/${{ inputs.image-name }}
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ inputs.image-name }}
 
+      # ---- Build local amd64 image for Trivy ----
       - name: Build local amd64 image for Trivy
         uses: docker/build-push-action@v5
         with:
@@ -62,6 +69,7 @@ jobs:
           load: true
           tags: local-scan-image
 
+      # ---- Trivy scan ----
       - name: Trivy Security Scan
         uses: aquasecurity/trivy-action@0.22.0
         with:
@@ -70,6 +78,7 @@ jobs:
           exit-code: 1
           ignore-unfixed: true
 
+      # ---- Build & Push multi-arch ----
       - name: Build and Push Multi-Arch Image
         uses: docker/build-push-action@v5
         with:
