--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   mongodb:
     image: mongo
-    container_name: beers_mongo
+    container_name: mongodb
     ports:
       - "27017:27017"
     volumes:
