--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,9 @@ services:
   create-service:
     build: ./create-service
     container_name: create_service
-    environment:
-      - MONGO_URI=${MONGO_URI}
-      - DATABASE=${DATABASE}
-      - COLLECTION=${COLLECTION}
+    env_file: .env
     ports:
       - "8080:8080"
-
     depends_on:
       mongodb:
         condition: service_healthy
@@ -31,13 +27,9 @@ services:
   read-service:
     build: ./read-service
     container_name: read_service
-    environment:
-      - MONGO_URI=${MONGO_URI}
-      - DATABASE=${DATABASE}
-      - COLLECTION=${COLLECTION}
+    env_file: .env
     ports:
       - "8081:8081"
-
     depends_on:
       mongodb:
         condition: service_healthy
@@ -45,13 +37,9 @@ services:
   update-service:
     build: ./update-service
     container_name: update_service
-    environment:
-      - MONGO_URI=${MONGO_URI}
-      - DATABASE=${DATABASE}
-      - COLLECTION=${COLLECTION}
+    env_file: .env
     ports:
       - "8082:8082"
-
     depends_on:
       mongodb:
         condition: service_healthy
@@ -59,13 +47,9 @@ services:
   delete-service:
     build: ./delete-service
     container_name: delete_service
-    environment:
-      - MONGO_URI=${MONGO_URI}
-      - DATABASE=${DATABASE}
-      - COLLECTION=${COLLECTION}
+    env_file: .env
     ports:
       - "8083:8083"
-
     depends_on:
       mongodb:
         condition: service_healthy
