--- a/.github/workflows/update-service.yml
+++ b/.github/workflows/update-service.yml
@@ -20,15 +20,29 @@ on:
 
 jobs:
 
+  prepare:
+    runs-on: ubuntu-latest
+    outputs:
+      run_ci: ${{ steps.flags.outputs.run_ci }}
+    steps:
+      - id: flags
+        run: |
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            echo "run_ci=false" >> $GITHUB_OUTPUT
+          else
+            echo "run_ci=true" >> $GITHUB_OUTPUT
+          fi
+
   tests:
-    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+    needs: prepare
+    if: needs.prepare.outputs.run_ci == 'true'
     uses: ./.github/workflows/reusable-tests.yml
     with:
       working-directory: update-service
 
   docker:
     needs: tests
-    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+    if: needs.prepare.outputs.run_ci == 'true'
     uses: ./.github/workflows/reusable-docker.yml
     with:
       context: update-service
@@ -40,5 +54,5 @@ jobs:
 
   release:
     needs: docker
-    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    if: startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/reusable-release.yml
