--- a/.github/workflows/create-service.yml
+++ b/.github/workflows/create-service.yml
@@ -53,6 +53,8 @@ jobs:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
   release:
-    needs: docker
-    if: startsWith(github.ref, 'refs/tags/v')
+    needs: prepare
+    if: |
+      needs.prepare.outputs.run_ci == 'false' &&
+      startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/reusable-release.yml
