--- a/.github/workflows/update-service.yml
+++ b/.github/workflows/update-service.yml
@@ -19,8 +19,26 @@ on:
       - "update-service/**"
 
 jobs:
-  pipeline:
-    uses: ./.github/workflows/reusable-service-pipeline.yml
-    secrets: inherit
+
+  tests:
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+    uses: ./.github/workflows/reusable-tests.yml
     with:
-      service-name: update
+      working-directory: update-service
+
+  docker:
+    needs: tests
+    if: ${{ !startsWith(github.ref, 'refs/tags/') }}
+    uses: ./.github/workflows/reusable-docker.yml
+    with:
+      context: update-service
+      dockerfile: update-service/Dockerfile
+      image-name: update-service
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  release:
+    needs: docker
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+    uses: ./.github/workflows/reusable-release.yml
